# kalibra

./: .gitignore  README.md  kalibra.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: compare.yml
config/examples/: ci-gate.yml  cost-control.yml  model-comparison.yml  quick-check.yml  swebench.yml  synth-braintrust.yml  synth-langfuse.yml
config/sources/: synth-braintrust.yml  synth-langsmith.yml  synth.yml
docs/: crewai.md  getting-started.md  index.md  otel-genai.md  phoenix.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
examples/: fetch_huggingface.py  phoenix_kalibra_tutorial.ipynb  sample-baseline.jsonl  sample-current.jsonl
examples/crewai/: README.md  crewai_kalibra_tutorial.ipynb  scenario_cost_explosion.jsonl  scenario_cost_explosion.yml  scenario_redistribution.jsonl  scenario_redistribution.yml  scenarios.py
examples/otel_genai/: kalibra.yml  otel_genai_tutorial.ipynb  traces.jsonl
examples/traces/: traces.jsonl
scripts/: synth_traces.py
src/agentflow/: __init__.py  cli.py  collection.py  compare.py  config.py  metrics.py  report.py
src/agentflow/connectors/: __init__.py  langfuse.py  langsmith.py
src/agentflow/converters/: __init__.py  base.py  generic.py  swebench.py
src/agentflow/plugins/: __init__.py  builtin.py  registry.py
src/kalibra/: __init__.py  cli.py  collection.py  compare.py  config.py  display.py  engine.py  loader.py  metrics.py  model.py  openinference.py  report.py
src/kalibra/commands/: __init__.py  compare.py  demo.py  init.py  inspect.py  pull.py  validate.py
src/kalibra/connectors/: __init__.py  braintrust.py  langfuse.py  langsmith.py
src/kalibra/converters/: __init__.py  base.py  generic.py  swebench.py
src/kalibra/demo_data/: baseline.jsonl  current.jsonl  fetch_huggingface.py
src/kalibra/loaders/: __init__.py  _utils.py  flat.py  openinference.py  otel_genai.py
src/kalibra/metrics/: __init__.py  _stats.py  cost.py  cost_quality.py  duration.py  error_rate.py  path_distribution.py  span_breakdown.py  steps.py  success_rate.py  token_efficiency.py  token_usage.py  trace_breakdown.py
src/kalibra/plugins/: __init__.py  builtin.py  registry.py
src/kalibra/renderers/: __init__.py  json_renderer.py  markdown.py  terminal.py
tests/: test_basics.py  test_braintrust_connector.py  test_cli.py  test_config_flow.py  test_engine_renderer.py  test_formats.py  test_jsonl_format.py  test_langfuse_connector.py  test_langsmith_connector.py  test_metrics.py  test_openinference.py  test_otel_genai.py  test_overrides.py  test_report.py  test_span_breakdown.py  test_where_filter.py
tests/fixtures/: phoenix_context_retrieval.jsonl  phoenix_random.jsonl
