[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "0.1.0"
description = "Regression detection and analysis for AI agents — compare runs, gate CI on quality, connect to Langfuse and LangSmith."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vladimir Orekhov" },
]
keywords = ["agents", "observability", "regression", "evaluation", "workflow", "opentelemetry", "llm", "langfuse", "langsmith"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.27",              # Langfuse REST connector
    "langsmith>=0.1",           # LangSmith SDK connector
    "opentelemetry-sdk>=1.20",  # ReadableSpan, SpanContext, StatusCode
    "pandas>=2.0",              # swebench parquet ingestion
    "pyyaml>=6.0",              # config parsing
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agentflow = "agentflow.cli:main"

[project.urls]
Homepage = "https://github.com/vorekhov/agentflow"
Repository = "https://github.com/vorekhov/agentflow"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
