[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalibra"
version = "0.1.0"
description = "Regression detection and CI quality gates for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vladimir Orekhov" },
]
keywords = ["agents", "observability", "regression", "evaluation", "llm", "ci", "quality-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
stats = [
    "scipy>=1.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
kalibra = "kalibra.cli:main"

[project.urls]
Homepage = "https://github.com/khan5v/kalibra"
Repository = "https://github.com/khan5v/kalibra"

[tool.hatch.build.targets.wheel]
packages = ["src/kalibra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
